test/files/pos/t3120/Q.java
public class Q {
    public static void passInner(J1.Inner1 myInner) {}
}
