test/files/neg/t7386/MyClassBase.java

abstract class MyClassBase {
  public static void myStaticBaseMethod() {}
}
